--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "deploy": "hardhat run scripts/deploy.js"
   },
   "devDependencies": {
-    "hardhat": "^2.22.2",
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
-    "@openzeppelin/contracts": "^4.0.0"
+    "@openzeppelin/contracts": "^4.0.0",
+    "hardhat": "^2.22.2",
+    "solhint": "^4.5.2"
   }
 }
